--- a/core/src/main/resources/runtime-properties/common-shared.properties
+++ b/core/src/main/resources/runtime-properties/common-shared.properties
@@ -77,7 +77,7 @@ store.front.webapp.prefix=http://localhost:8080/
 # ##################################### #
 
 # Settings for the default persistence unit
-blPU.hibernate.hbm2ddl.auto=validate
+blPU.hibernate.hbm2ddl.auto=none
 blPU.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 blPU.hibernate.show_sql=false
 blPU.hibernate.cache.use_second_level_cache=true
@@ -87,7 +87,7 @@ blPU.hibernate.connection.useUnicode=true
 blPU.hibernate.connection.characterEncoding=UTF-8
 blPU.hibernate.connection.charSet=UTF-8
 # Settings for the CMS storage persistence unit
-blCMSStorage.hibernate.hbm2ddl.auto=validate
+blCMSStorage.hibernate.hbm2ddl.auto=none
 blCMSStorage.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 blCMSStorage.hibernate.show_sql=false
 blCMSStorage.hibernate.cache.use_second_level_cache=true
@@ -97,7 +97,7 @@ blCMSStorage.hibernate.connection.useUnicode=true
 blCMSStorage.hibernate.connection.characterEncoding=UTF-8
 blCMSStorage.hibernate.connection.charSet=UTF-8
 # Settings for the secure persistence unit
-blSecurePU.hibernate.hbm2ddl.auto=validate
+blSecurePU.hibernate.hbm2ddl.auto=none
 blSecurePU.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 blSecurePU.hibernate.show_sql=false
 blSecurePU.hibernate.cache.use_second_level_cache=false
