Load demo images from classpath

--- a/admin/src/main/resources/runtime-properties/production.properties
+++ b/admin/src/main/resources/runtime-properties/production.properties
@@ -5,3 +5,13 @@
 # common.properties
 
 # Please see common-shared.properties for more information on how the properties files work
+
+# Allows us to load demo images from the classpath.   This would be an expensive approach
+# for most implementations and should only be done in dev.   Images should be on a 
+# shared file system or the DB when in non-development environments
+asset.server.file.classpath.directory=/cms/static
+
+# Because we are blanking the value out here, broadleaf will use System.setProperty("java.io.tmpdir")
+# This would NOT make sense in non-development environments since the OS may delete files in that
+# directory.
+asset.server.file.system.path=
