Suppress google analytics warning message

--- a/admin/src/main/resources/runtime-properties/production.properties
+++ b/admin/src/main/resources/runtime-properties/production.properties
@@ -15,3 +15,6 @@ asset.server.file.classpath.directory=/cms/static
 # This would NOT make sense in non-development environments since the OS may delete files in that
 # directory.
 asset.server.file.system.path=
+
+# suppress warning message with dummy google analytics code
+googleAnalytics.masterWebPropertyId=UA-ZZZZZZZ-Z
