Disable caching to make it more interesting

--- a/admin/src/main/resources/runtime-properties/production.properties
+++ b/admin/src/main/resources/runtime-properties/production.properties
@@ -18,3 +18,8 @@ asset.server.file.system.path=
 
 # suppress warning message with dummy google analytics code
 googleAnalytics.masterWebPropertyId=UA-ZZZZZZZ-Z
+
+# disable caching to make it more interesting
+cache.page.templates=false
+messages.cacheSeconds=0
+cache.entity.dao.metadata.ttl=0
